welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:17: error: recursive variable tableauCouleurs needs type
  var tableauCouleurs = tableauCouleurs()
                        ^